--- a/blessings.tex
+++ b/blessings.tex
@@ -103,8 +103,8 @@ sváteční.}
 	Baruch Atah Adonai, Eloheinu Melech ha-olam, asher kid’shanu b’mitzvotav
 	v’tzivanu al n’tilat yadayim.}
 \newcommand{\NetilatYadayimEng}{Blessed are You, Lord our G-d, Ruler of the Universe, who sanctifies us with his commandments and commands us regarding the washing of hands.}
-\newcommand{\NetilatYadayimCz}{\textcolor{red}{ FIXME Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, !!!!!!jenž nás posvětil Svými přikázáními a přikázal nám přikázání ohledně umývání rukou. OR:
-že jsi nás posvětil svými příkazy a dal jsi nám příkaz o omývání rukou. }}
+\newcommand{\NetilatYadayimCz}{Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, % !!!!!!jenž nás posvětil Svými přikázáními a přikázal nám přikázání ohledně umývání rukou. OR:
+že jsi nás posvětil svými příkazy a dal jsi nám příkaz o omývání rukou. }
 %	
 \newcommand{\HaMotziBlessingHeb}{	
 	\begin{center}
@@ -120,7 +120,8 @@ sváteční.}
 \newcommand{\HaMotziBlessingEng}{%
 	Blessed are you, Lord our God, ruler of the universe who brings forth bread from the earth.}
 %
-\newcommand{\HaMotziBlessingCz}{\textcolor{red}{FIXME : Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, původce chleba ze země/kdo nese....který neseš... chléb ze země/přináší chléb ze země? že vyvádíš ze země chléb.}}
+\newcommand{\HaMotziBlessingCz}{Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, % původce chleba ze země/kdo nese....který neseš... chléb ze země/přináší chléb ze země? že vyvádíš ze země chléb.
+jenž dáváš chlebu vyrůst ze země.}
 
 	
 \newcommand{\MatzahBlessingHeb}{
@@ -133,7 +134,8 @@ sváteční.}
 	v’tzivanu al achilat matzah.}
 \newcommand{\MatzahBlessingEng}{%
 	We praise God, Ruler of Everything, who makes us holy through his commandments, and commands us to eat matzah.}
-\newcommand{\MatzahBlessingCz}{\textcolor{red} {FIXME Požehnaný jsi Ty, Hospodine, Bože náš, Králi všehomíra, jenž nás posvětil Svými přikázáními a přikázal nám přikázání jíst maca. OR Požehnán jsi, Hospodine, Bože náš, králi světa, že jsi nás posvětil svými příkazy a dal jsi nám příkaz o pojídání hořkých bylin. }}
+\newcommand{\MatzahBlessingCz}{Požehnán jsi, Hospodine, Bože náš, Králi světa, % že jsi nás posvětil svými přikázáními a přikázal nám přikázání jíst maca. OR Požehnán jsi, Hospodine, Bože náš, králi světa, 
+	že jsi nás posvětil svými příkazy a dal jsi nám příkaz o pojídání nekvašených chlebů. }
 %
 %
 \newcommand{\MarorBlessingHeb}{
@@ -160,33 +162,37 @@ v’tzivanu al achilat maror.}
 	\begin{paracol}{2}
 		Birkat Hazan: \vspace*{4mm} \switchcolumn \vspace*{-1mm} We praise God for sustaining life and providing food for all creatures.\\ %(sung)
 		%{\textcolor{darkblue} We praise God, Ruler of Everything, whose goodness sustains the world. You are the origin of love and compassion, the source of bread for all. Thanks to You, we need never lack for food; You provide food enough for everyone. We praise God, source of food for everyone.}
-		\hspace*{40mm}{\color{black} Amen}\vspace*{2ex}
+		\hspace*{50mm}{\color{black} Amen}
 		%
-		\switchcolumn Birkat HaAretz: \vspace*{4mm}	\switchcolumn  \vspace*{-1mm} We thank God for being compassionate and nourishing us with food and Torah.\\ %recount Exodus to Canaan. 
+		\switchcolumn \vspace*{2ex} Birkat HaAretz: \vspace*{6mm}	\switchcolumn  \vspace*{-1mm} We thank God for being compassionate and nourishing us with food and Torah.\\ %recount Exodus to Canaan. 
 		%{\textcolor{darkblue} As it says in the Torah: When you have eaten and are satisfied, give praise to your God who has given you this good earth. We praise God for the earth and for its sustenance, and for the words of Torah which are sweet like honey on the tongue and a lamp to light our feet (ps: 119)} \textcolor{black}\\
-		\hspace*{40mm}{\color{black} Amen}
+		\hspace*{50mm}{\color{black} Amen}
 		%{\textcolor{darkblue} Just as God sustained the Jewish people in the desert, so too God sustains us now and in the future. }\\
 		%\textcolor{black}
 		%\hspace*{80mm}{\large Amen}\vspace*{2ex}\\
 		%
-		\switchcolumn Birkat Yerushalayim: \vspace*{4mm} \switchcolumn  \vspace*{-1mm}	We ask God for His mercy and continued support.\\ %, and traditionally to quickly rebuild Jerusalem.
-		\hspace*{40mm}{\color{black} Amen}\vspace*{2ex}
+		\switchcolumn \vspace*{0.5ex} Birkat Yerushalayim: \vspace*{4mm} \switchcolumn  \vspace*{-1mm}	We ask God for His mercy and continued support.\\ %, and traditionally to quickly rebuild Jerusalem.
+		\hspace*{50mm}{\color{black} Amen}\vspace*{2ex}
 		%
-		\switchcolumn \\Birkat HaTov VeHaMeitiv: \vspace*{4mm}	\switchcolumn  \vspace*{-1mm}	We remember the blessings God bestows upon us. \\%and request God never denies us anything good.\\
-		\hspace*{40mm}{\color{black} Amen}\vspace*{2ex}
+		\switchcolumn \vspace*{1ex} Birkat HaTov VeHaMeitiv: \vspace*{4mm}	\switchcolumn  \vspace*{-1mm}	We remember the blessings God bestows upon us. \\%and request God never denies us anything good.\\
+		\hspace*{50mm}{\color{black} Amen}\vspace*{2ex}
 		%
 		\switchcolumn Harahaman : \vspace*{4mm}	\switchcolumn  \vspace*{-1mm}	%\textit{(May the compassionate one)}\\
 		We ask God to uplift us and our community, and all the world.\\
 		%{\textcolor{darkblue} Renew our spiritual center in our time. We praise God, who centers us. May the source of peace grant peace to us, to the Jewish people, and to the entire world.}\textcolor{black}\\
-		\hspace*{40mm}{\color{black} Amen}
+		\hspace*{50mm}{\color{black} Amen}
 		\vspace*{2ex}
 	\end{paracol}
 	{\textcolor{darkblue} \centering Spanish and Portugese Jews sing a Ladino song entitled “Bendigamos” or “We will bless” (let's try to find it on spotify).}
 	}
 %
-\newcommand{\MiriamBlessing}{Zot Kos Miryam, kos mayim hayim. Zeikher l’yitziat Mitztrayim.
-	
-	This is the Cup of Miriam, the cup of living waters. Let us remember the Exodus from Egypt. These are the living waters, God’s gift to Miriam, which gave new life to Israel as we struggled with ourselves in the wilderness. Blessed are You God, Who brings us from the narrows into the wilderness, sustains us with endless possibilities, and enables us to reach a new place.”
+\newcommand{\MiriamBlessing}{
+	\begin{center}
+		\large Zot Kos Miryam, kos mayim hayim. Zeikher l’yitziat Mitztrayim.
+		\end{center}	
+	This is the Cup of Miriam, the cup of living waters. 
+	\vspace*{2ex}
+	These are the living waters, God’s gift to Miriam, which gave new life to Israel as we struggled with ourselves in the wilderness. Blessed are You God, Who brings us from the narrows into the wilderness, sustains us with endless possibilities, and enables us to reach a new place.”
 	}
 \newcommand{\NirtzahBlessing}{\centering \color{darkblue} \largehebrew{לְשָׁנָה הַבָּאָה בִּירוּשָלָיִם}\\
 	L’shana haba-ah biy’rushalayim\\
