--- a/couching.tex
+++ b/couching.tex
@@ -24,8 +24,10 @@
 % 
 \newcommand{\Neirot}{
 	{\noindent \textit{Protože je šabat, přeskočíme tuto část, dokud slunce nezapadne.}} \vspace*{2ex}\\{\noindent\color{midblue} \textit{We normally begin after Havdalah by lighting the festival candles, but today we will start the Seder before sunset so we finish in time to sleep.}}
-	\CandlesBlessingHeb
-	\textit{\CandlesBlessingTlit}
+	\begin{center}
+		\CandlesBlessingHeb
+		\textit{\CandlesBlessingTlit}
+		\end{center}
 	\begin{multicols}{2}
 		\CandlesBlessingCz
 		
@@ -35,8 +37,11 @@
 	}
 
 \newcommand{\Kaddeish}{
-	\WineBlessingHeb
-	\textit{\WineBlessingTlit}
+	
+	\begin{center}
+		\WineBlessingHeb
+		\textit{\WineBlessingTlit}
+		\end{center}
 	\begin{multicols}{2}
 		\WineBlessingCz
 		
@@ -46,8 +51,10 @@
 }
 
 \newcommand{\Shehechyanu}{
-	\ShehechyanuBlessingHeb
-	\textit{\ShehechyanuBlessingTlit}
+	\begin{center}
+		\ShehechyanuBlessingHeb
+		\textit{\ShehechyanuBlessingTlit}	
+		\end{center}
 	\par
 		\begin{multicols}{2}
 		\ShehechyanuBlessingCz
@@ -63,8 +70,10 @@
 \newcommand{\Karpas}{
 {\noindent\textit{Petržel namáčíme do slané vody, aby symbolizovala pot a slzy otroků}\\
 	\noindent\color{midblue} \textit{We dip Parsley into salt water to symbolise the sweat and tears of the slaves}}
-\KarpasBlessingHeb
-\textit{\KarpasBlessingTlit}
+	\begin{center}
+		\KarpasBlessingHeb
+		\textit{\KarpasBlessingTlit}
+		\end{center}
 \begin{multicols}{2}
 	\KarpasBlessingCz
 	
@@ -86,72 +95,70 @@
 \newcommand{\MaNishtana}{
 	{\doublespacing
 		\vspace*{2ex}
-		\centering \color{black}Ty čtyři otázky z Talmudu\\
+		\color{black}Ty čtyři otázky z Talmudu\\
 		\vspace*{2ex}
 		\textit{\noindent\color{midblue}We take turns to read these questions}\par
 		\vspace*{2ex}
-		\vspace*{2ex}
-		{\color{darkblue} \MaNishtanaHeb \\ \vspace*{1mm}
-		\textit{\MaNishtanaTlit} \\
-		{\color{midblue} \MaNishtanaEng} \\
-		{\color{black} \MaNishtanaCz}\\ 
-		\par
-		\vspace*{4ex}
-		\\
-		\onecolumn
-		\LARGE 1. \\ \raggedleft 
-		\vspace*{2ex}
-		\MaNishtanaHebi \\
-		\vspace*{1mm}
-		\textit{\MaNishtanaTliti} \\ {\color{midblue} \MaNishtanaEngi}\\ {\textcolor{black} \MaNishtanaCzi} \\ \raggedright 
-		\vspace*{2ex}
-		\MaNishtanaHebib \\
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitib} \\{\color{midblue} \MaNishtanaEngib} \\ {\color{black} \MaNishtanaCzib} \\ \raggedright
-		\par
-		\vspace*{4ex}
-		\\ \centering
-		\LARGE 2.\\ \raggedleft 
-		\vspace*{1mm}
-		\MaNishtanaHebii \\ 
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitii} \\ {\color{midblue} \MaNishtanaEngii} \\ {\textcolor{black} \MaNishtanaCzii} \vspace*{2ex} \\ \raggedright 
-		\vspace*{2ex}
-		\MaNishtanaHebiib \\ 
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitiib} \\ {\color{midblue} \MaNishtanaEngiib} \\ {\color{black} \MaNishtanaCziib} \\
-		\raggedright 
-		\par
-		\vspace*{4ex}
-		\\ \centering
-		\LARGE 3.\\ \raggedleft 
-		\vspace*{1mm}
-		\MaNishtanaHebiii \\
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitiii} \\{\color{midblue} \MaNishtanaEngiii} \\ {\color{black}\MaNishtanaCziii} \vspace*{2ex} \\ \raggedright 
-		\vspace*{2ex}
-		\MaNishtanaHebiiib\\ 
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitiiib} \\{\color{midblue} \MaNishtanaEngiiib} \\ {\color{black} \MaNishtanaCziiib} \\
-		\raggedright 
-		\par
-		\vspace*{4ex}
-		\onecolumn
-		\\ \centering
-		\LARGE 4.\\ \raggedleft 
-		\vspace*{1mm}
-		\MaNishtanaHebiv\\
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitiv} \\ {\color{midblue} \MaNishtanaEngiv} \\ {\color{black}\MaNishtanaCziv} \vspace*{2ex} \\ \raggedright 
-		\vspace*{2ex}
-		\MaNishtanaHebivb \\ 
-		\vspace*{1mm}
-		\textit{\MaNishtanaTlitivb} \\{\color{midblue} \MaNishtanaEngivb} \\ {\color{black} \MaNishtanaCzivb} \\
-		\par
-		\vspace*{4exex}
-		}}
-		\\
-		\vspace{2ex}
+		\begin{center}
+			{\color{darkblue} \MaNishtanaHeb \\ \vspace*{1mm}
+			\textit{\MaNishtanaTlit} \\
+			{\color{midblue} \MaNishtanaEng} \\
+			{\color{black} \MaNishtanaCz}\\ 
+			\par
+			\vspace*{4ex}
+			\\
+
+			\LARGE 1. \\ \raggedleft 
+			\vspace*{2ex}
+			\MaNishtanaHebi \\
+			\vspace*{1mm}
+			\textit{\MaNishtanaTliti} \\ {\color{midblue} \MaNishtanaEngi}\\ {\textcolor{black} \MaNishtanaCzi} \\ \raggedright 
+			\vspace*{2ex}
+			\MaNishtanaHebib \\
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitib} \\{\color{midblue} \MaNishtanaEngib} \\ {\color{black} \MaNishtanaCzib} \\ \raggedright
+			\par
+			\vspace*{4ex}
+			\\ \centering
+			\LARGE 2.\\ \raggedleft 
+			\vspace*{1mm}
+			\MaNishtanaHebii \\ 
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitii} \\ {\color{midblue} \MaNishtanaEngii} \\ {\color{black} \MaNishtanaCzii} \vspace*{2ex} \\ \raggedright 
+			\vspace*{2ex} \onecolumn
+			\MaNishtanaHebiib \\ 
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitiib} \\ {\color{midblue} \MaNishtanaEngiib} \\ {\color{black} \MaNishtanaCziib} \\
+			\raggedright 
+			\par
+			\vspace*{4ex}
+			\\ \centering
+			\LARGE 3.\\ \raggedleft 
+			\vspace*{1mm}
+			\MaNishtanaHebiii \\
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitiii} \\{\color{midblue} \MaNishtanaEngiii} \\ {\color{black}\MaNishtanaCziii} \vspace*{2ex} \\ \raggedright 
+			\vspace*{2ex}
+			\MaNishtanaHebiiib\\ 
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitiiib} \\{\color{midblue} \MaNishtanaEngiiib} \\ {\color{black} \MaNishtanaCziiib} \\
+			\raggedright 
+			\par
+			\vspace*{4ex}
+			\\ \centering
+			\LARGE 4.\\ \raggedleft 
+			\vspace*{1mm}
+			\MaNishtanaHebiv \\
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitiv} \\{\color{midblue} \MaNishtanaEngiv} \\ {\color{black}\MaNishtanaCziv} \vspace*{2ex} \\ \raggedright 
+			\vspace*{2ex}
+			\MaNishtanaHebivb\\ 
+			\vspace*{1mm}
+			\textit{\MaNishtanaTlitivb} \\{\color{midblue} \MaNishtanaEngivb} \\ {\color{black} \MaNishtanaCzivb} \\ 
+			\par
+			}
+			\vspace{2ex}
+			\end{center}}
 		\begin{multicols}{2}
 			\MaNishtanaAnswerCz
 			
@@ -160,58 +167,61 @@
 }
 
 \newcommand{\ArbaAh}{
-	The Talmud describes four types of children at the Pesach table, and how to respond to them. \\
-	Ty čtyři děti z Talmudu
+	{Ty čtyři děti z Talmudu \\}
+	\color{midblue}	The Talmud describes four types of children at the Pesach table, and how to respond to them. \\
 	\begin{enumerate}
 		\item \raggedright{\color{midblue} \childi \\ \color{black} \childicz \\}
+		\begin{center}
+			\color{midblue}\childiq \\ \color{black} \childiqcz\\
+			\end{center}
+		\raggedleft \color{midblue}{\childia \\ \color{black} \raggedleft \childiacz}
+		
+		\item {\raggedright {\color{midblue} \childii \\ \color{black} \childiicz \\}}
 		\vspace*{2ex}
-		\centering{\color{midblue}\childiq \\ \color{black} \childiqcz} \\
+		{\centering {\color{midblue}\childiiq \\ \color{black} \childiiqcz}} \\
 		\vspace{2ex}
-		\raggedleft{\color{midblue}{\childia \\ \color{black} \childiacz}}
+		\raggedleft {\color{midblue}{\childiia \\ \color{black} \childiiacz}}
 		
-		\item \raggedright{\color{midblue} \childii \\ \color{black} \childiicz \\}
+		\item {\raggedright {\color{midblue} \childiii \\ \color{black} \childiiicz \\}}
 		\vspace*{2ex}
-		\centering{\color{midblue}\childiiq \\ \color{black} \childiiqcz} \\
+		\centering {\color{midblue}\childiiiq \\ \color{black} \childiiiqcz} \\
 		\vspace{2ex}
-		\raggedleft{\color{midblue}{\childiia \\ \color{black} \childiiacz}}
+		\raggedleft {\color{midblue}{\childiiia \\ \color{black} \childiiiacz}}
 		
-		\item \raggedright{\color{midblue} \childiii \\ \color{black} \childiiicz \\}
+		\item {\raggedright {\color{midblue} \childiv \\ \color{black} \childivcz \\}}
 		\vspace*{2ex}
-		\centering{\color{midblue}\childiiiq \\ \color{black} \childiiiqcz} \\
-		\vspace{2ex}
-		\raggedleft{\color{midblue}{\childiiia \\ \color{black} \childiiiacz}}
-		
-		\item \raggedright{\color{midblue} \childiv \\ \color{black} \childivcz \\}
-		\vspace*{2ex}
-		\raggedleft{\color{midblue}{\childiva \\ \color{black} \childivacz}}
-		
+		\raggedleft {\color{midblue}{\childiva \\ \color{black} \childivacz}}
 	\end{enumerate}
 }
 
 \newcommand{\MaggidIntro}{%
-\begin{Center}
-	\textit{\color{black} Naplňte svůj pohár, ale ještě ho nepijte \\ \color{midblue} Pour the second glass. Do not drink it yet.}\\
-	\end{Center}
+	{\textit{\color{black} Naplňte svůj pohár, ale ještě ho nepijte \\ \color{midblue} Pour the second glass. Do not drink it yet.}\\}
 	{\onehalfspacing \color{black} \MaggidText}
+	\newpage
 	\begin{center}
 		\textit{Zvedni svůj pohár: \\ \color{midblue} Raise the glass and read together:}\\
 	\vspace*{2ex}
 	\color{black}{\Huge \PromiseToastHeb \\}
-	%\vspace*{1mm}
+	\vspace*{1mm}
 	\textit{\PromiseToastTlit}
 	\end{center}
 	\begin{multicols}{2}
-		\PromiseToastCz
+		\color{black} \PromiseToastCz
 		
 		\columnbreak 
 		\PromiseToastEng
 	\end{multicols}
-	\centering\textit{now put the glass down without drinking.\\}
-	\color{midblue} \raggedright It took many generations, the story of Joseph and his brothers finding a new home in a foreign land in a time of famine and personal hardship, and much serendipity, for the Israelites to find themselves in Egypt. During this time, the King became concerned enough about the population demographics that he forced our ancestors to toil on his behalf and ordered all newborn boys killed in the Israelite camp. It then took Moses, drawn out of the water by Pharoah's daughter decades of running away -like Jonah - and an encounter with a mysterious burning bush and rod-turned-snake to do anything about it. The story of the Jewish people doesn't always make sense in the moment, and neither do our lives, but during Pesach we see a cycle turn from suffering to joy and freedom, and we find hope that this cycle will prevail in our lives and in the world}\\
+	{\centering\textit{ \color{midblue} Now put the glass down without drinking.\vspace*{4ex}\\}}
+	{\color{midblue} \large It took many generations, the story of Joseph and his brothers finding a new home in a foreign land in a time of famine and personal hardship, and much serendipity, for the Israelites to find themselves in Egypt. 
+	\vspace*{4ex}\\ During this time, the King became concerned enough about the population demographics that he forced our ancestors to toil on his behalf and ordered all newborn boys killed in the Israelite camp. 
+	\vspace*{4ex}\\It then took Moses, drawn out of the water by Pharoah's daughter decades of running away -like Jonah - and an encounter with a mysterious burning bush and rod-turned-snake to do anything about it. 
+	\vspace*{4ex}\\The story of the Jewish people doesn't always make sense in the moment, and neither do our lives, but during Pesach we see a cycle turn from suffering to joy and freedom, and we find hope that this cycle will prevail in our lives and in the world}}
+%
 \newcommand{\Plagues}{
 	\noindent\color{midblue} G-d brought about 10 Plagues upon the Egyptians in Egypt:\\
-	\color{black} Deset ran přivedl Buh –  na Egypťany v Egyptě:\\
-	\color{black}\textit{Když čteme název každého moru, dejte na stránku kapku nápoje, jako slzu za utrpení, které ve světě způsobili. \\ \color{midblue}As we read the name of each plague we spill a drop of drink on each one, like a tear for the suffering they caused in the world.}
+	\color{black} Deset ran přivedl Buh –  na Egypťany v Egyptě:
+	\vspace*{2ex}\\
+	\color{black}\textit{{\color{midblue}As we read the name of each plague we spill a drop of drink on each one, like a tear for the suffering they caused in the world.} \\ Když čteme název každého moru, dejte na stránku kapku nápoje, jako slzu za utrpení, které ve světě způsobili. \\}
 	\vspace*{2ex}
 	\begin{adjustwidth}{15mm}{15mm}
 		\begin{multicols}{3}
@@ -232,8 +242,12 @@
 	%	{\large Sarah is allergic to onion so is exempt from being whacked}
 	%	}
 	
-	*maybe find a song version of the dayyeinu and put the words out so we can listen and hit when we spot the word dayyeinu*\\
 	\DayyeinuIntro
+	\vspace*{2ex}
+	\begin{center}
+		{\centering \textit{\color{midblue}*maybe find a song version so we can listen and hit when we hear the word dayyeinu*}}
+		\end{center}
+	\vspace*{2ex}\\
 	\DayyeinuText
 	\vspace*{2ex}}
 	
@@ -248,9 +262,10 @@ We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend t
 %
 \newcommand{\NetilatYadayim}{
 	\textit{Dále si umyjeme ruce s požehnáním \\ {\color{midblue} pour water three times on your right hand then three times on your left hand and then read:}}\\
-	\NetilatYadayimHeb
-	\textit{\NetilatYadayimTlit}
-	\raggedleft
+	\begin{center}
+		\NetilatYadayimHeb
+		\textit{\NetilatYadayimTlit}
+		\end{center}
 	\begin{multicols}{2}
 		\NetilatYadayimCz
 		
@@ -260,8 +275,10 @@ We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend t
 }
 \newcommand{\HaMotzi}{
 	\textit{We bless the unleavened bread just as we bless any bread at the start of a meal:}
-	\HaMotziBlessingHeb
-	\textit{\HaMotziBlessingTlit}
+	\begin{center}
+		\HaMotziBlessingHeb
+		\textit{\HaMotziBlessingTlit}
+		\end{center}
 	\begin{multicols}{2}
 		\HaMotziBlessingCz
 		
@@ -270,6 +287,8 @@ We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend t
 }
 \newcommand{\Matzah}{
 	\textit{Vypravěč ukáže stolovníkům macesy a říká:\\\color{midblue} The Matzah is displayed as the following passage is read:}\\
+	%forced line break because it keeps messing up
+	\vspace*{5ex}
 		\begin{multicols}{2}
 		\color{black} Z jakého důvodu jíme tuto maca? Proto, že než se našim předkům 
 		zjevil Svatý, buď požehnán, a vykoupil je, nestačilo jim vykynout těsto. Je 
@@ -280,8 +299,10 @@ We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend t
 		\columnbreak Why do we eat this Matzah? Because when our ancestors were rescued from Egypt, there was no time to leaven their dough. It is said: “They baked Matzah cakes from the dough they brought out of Egypt, which was not leavened, because they were driven out of Egypt and could not stay there, and they had not prepared any provisions for the journey.”	
 	\end{multicols}
 	\textit{\color{midblue} We recite the blessing over Matzah because consuming it is a specific Torah command:}
-	\MatzahBlessingHeb
-	\textit{\MatzahBlessingTlit}
+	\begin{center}
+		\MatzahBlessingHeb
+		\textit{\MatzahBlessingTlit}
+		\end{center}
 	\begin{multicols}{2}
 	\MatzahBlessingCz
 	
@@ -292,10 +313,11 @@ We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend t
 \newcommand{\Maror}{
 	{\color{midblue}
  In creating a holiday about the joy of freedom, we turn the story of our bitter
-history into a sweet celebration. \\ We recognize this by dipping our bitter horseradish (křen) into the sweet charoset. Try to taste both the flavours at once.\\}
-\vspace*{2ex}
+history into a sweet celebration. \vspace*{2ex} \\ We recognize this by dipping our bitter horseradish (křen) into the sweet charoset. \\Try to taste both the flavours at once.}
+\vspace*{4ex}\\
 \color{black} 
 \textit{Vypravěč ukáže maror a říká:\\ \color{midblue} The Maror is displayed and the following is read out loud:}\\
+\vspace*{3ex}
 \begin{multicols}{2}
 	Proč jíme tuto hořkost (maror)? Proto, že Egypťané ztrpčovali život 
 	našich předků v Egyptě, jak je řečeno: „Ztrpčovali jejich život dřinou s 
@@ -305,10 +327,11 @@ history into a sweet celebration. \\ We recognize this by dipping our bitter hor
 	\columnbreak Why do we eat this bitterness? Because the Egyptians made our ancestors' lives ”bitter with hard labour in clay and brick, and all their work in the field, and all their other work with which they made them slaves in forced labour.”
 \end{multicols}
 
-\vspace*{2ex}
 \textit{namáčíme náš křen do charosetu a řekněte:}\\
-\MarorBlessingHeb
-\textit{\MarorBlessingTlit}
+\begin{center}
+	\MarorBlessingHeb
+	\textit{\MarorBlessingTlit}
+	\end{center}
 \begin{multicols}{2}
 	\MarorBlessingCz
 	
@@ -321,7 +344,7 @@ history into a sweet celebration. \\ We recognize this by dipping our bitter hor
 	\KoreichText}
 
 \newcommand{\Bareich}{
-	\textit{\color{black} Naplňte svůj pohár, ale ještě ho nepijte \\ \color{midblue} Pour the third glass. Do not drink it yet.} \BareichEng}
+	\textit{\color{black} Naplňte svůj pohár, ale ještě ho nepijte \\ \color{midblue} Pour the third glass. Do not drink it yet.}\\ \BareichEng}
 
 \newcommand{\Hallel}{%
   \HallelHeb
@@ -340,7 +363,8 @@ history into a sweet celebration. \\ We recognize this by dipping our bitter hor
 	\EliahuHaNavi}
 
 \newcommand{\Miriam}{
-\Miriamreading
+\MiriamReading 
+\vspace*{2ex}\\
 \MiriamBlessing}
 
 \newcommand{\Nirtzah}{
