--- a/readings.tex
+++ b/readings.tex
@@ -36,7 +36,7 @@
 \newcommand{\MaNishtanaHebib}{\hugehebrew{...הַלַּיְלָה הַזֶּה כֻּלּוֹ מַצָּה?}}
 %
 \newcommand{\MaNishtanaHebii}{\hugehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין שְׁאָר יְרָקוֹת ...\\}}
-\newcommand{\MaNishtanaHebiib}{\hugehebrew{...הַלַּיְלָה הַזֶּה (כֻּלּוֹ) מָרוֹר?}}
+\newcommand{\MaNishtanaHebiib}{\hugehebrew{...הַלַּיְלָה הַזֶּה כֻּלּוֹ מָרוֹר?}}
 %
 \newcommand{\MaNishtanaHebiii}{\hugehebrew{שֶׁבְּכָל הַלֵּילוֹת אֵין אָנוּ מַטְבִּילִין אֲפִילוּ פַּעַם אֶחָת ...\\}}
 \newcommand{\MaNishtanaHebiiib}{\hugehebrew{...הַלַּיְלָה הַזֶּה שְׁתֵּי פְעָמִים?}}
@@ -114,29 +114,28 @@
 %
 %
 \newcommand{\MaggidText}{%
-	{\color{midblue} G-d made many promises to Abraham:\\
-		\color{black} Bůh zaslíbil Abrahamovi:
-		\vspace*{4ex}
-		\\ \largehebrew{הַבֶּט־נָא הַשָּׁמַיְמָה וּסְפֹר הַכּוֹכָבִים אִם־תּוּכַל לִסְפֹּר אֹתָם וַיֹּאמֶר לוֹ כֹּה יִהְיֶה זַרְעֶךָ}\\
-		\raggedleft \color{midblue} Look toward heaven and count the stars, if you are able to count them. \\ So shall your offspring be.\\
-		\vspace*{2ex}
-		{\centering \textit{\color{black} Genesis 15:5}\\}
-		\color{black} 
-		\vspace*{4ex}
-		\largehebrew{אֲנִי יְהֹוָה אֲשֶׁר הוֹצֵאתִיךָ מֵאוּר כַּשְׂדִּים לָתֶת לְךָ אֶת־הָאָרֶץ הַזֹּאת לְרִשְׁתָּהּ}\\
-		\color{midblue} I brought you out from Ur to assign this land to you as a possession.\\
-		\vspace*{2ex}
-		{\centering \textit{\color{black} Genesis 15:7}\\}
-		\color{black}
-		\vspace*{4ex}
-		\largehebrew{יִהְיֶה זַרְעֲךָ בְּאֶרֶץ לֹא לָהֶם וַעֲבָדוּם וְעִנּוּ אֹתָם אַרְבַּע מֵאוֹת שָׁנָה...}	\\
-		\color{midblue} Your offspring shall be strangers in a foreign land, \\ and they shall be enslaved and oppressed four hundred years; \\
-		\color{black} \vspace*{2ex}
-		\raggedright \largehebrew{...וְגַם אֶת־הַגּוֹי אֲשֶׁר יַעֲבֹדוּ דָּן אָנֹכִי וְאַחֲרֵי־כֵן יֵצְאוּ בִּרְכֻשׁ גָּדוֹל}\\
-		\color{midblue} but I will execute judgment on the nation they shall serve, \\ and in the end they shall go free with great wealth.\\
-		\vspace*{2ex}
-		{\hspace*{0.375\textwidth} \textit{\color{black} Genesis 15: 13-14}}
-		}}
+	\\
+	{\raggedright  \color{midblue} G-d made many promises to Abraham:\\
+	\raggedright \color{black} Bůh zaslíbil Abrahamovi:}
+	\vspace*{8ex}
+	\\ \largehebrew{הַבֶּט־נָא הַשָּׁמַיְמָה וּסְפֹר הַכּוֹכָבִים אִם־תּוּכַל לִסְפֹּר אֹתָם וַיֹּאמֶר לוֹ כֹּה יִהְיֶה זַרְעֶךָ}\vspace*{1ex}\\
+	\raggedleft \color{midblue} Look toward heaven and count the stars, if you are able to count them. \\ So shall your offspring be.	\vspace*{2ex}\\
+	{\centering \textit{\color{black} Genesis 15:5}}
+	\color{black} \vspace*{10ex}\\
+	\largehebrew{אֲנִי יְהֹוָה אֲשֶׁר הוֹצֵאתִיךָ מֵאוּר כַּשְׂדִּים לָתֶת לְךָ אֶת־הָאָרֶץ הַזֹּאת לְרִשְׁתָּהּ} \vspace*{1ex}\\
+	\color{midblue} I brought you out from Ur to assign this land to you as a possession.
+	\vspace*{2ex}\\
+	{\centering \textit{\color{black} Genesis 15:7}}
+	\color{black}
+	\vspace*{10ex}\\
+	\largehebrew{יִהְיֶה זַרְעֲךָ בְּאֶרֶץ לֹא לָהֶם וַעֲבָדוּם וְעִנּוּ אֹתָם אַרְבַּע מֵאוֹת שָׁנָה...} \vspace*{1ex}	\\
+	\color{midblue} Your offspring shall be strangers in a foreign land, \\ and they shall be enslaved and oppressed four hundred years; 
+	\color{black} \vspace*{2ex}\\
+	{\raggedright \largehebrew{...וְגַם אֶת־הַגּוֹי אֲשֶׁר יַעֲבֹדוּ דָּן אָנֹכִי וְאַחֲרֵי־כֵן יֵצְאוּ בִּרְכֻשׁ גָּדוֹל} \vspace*{1ex}\\
+	\color{midblue} but I will execute judgment on the nation they shall serve, \\ and in the end they shall go free with great wealth.
+	\vspace*{2ex}\\
+	{\hspace*{0.375\textwidth} \textit{\color{black} Genesis 15: 13-14}}}\vspace*{8ex}\\
+	}
 
 \newcommand{\PromiseToastTlit}{V’hi she-amda l’avoteinu v’lanu.}
 \newcommand{\PromiseToastEng}{This promise has sustained our ancestors and us.}
@@ -239,13 +238,14 @@
 	How many times do we forget to pause and notice that where we are? Dayyeinu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say \textit{“Dayyeinu”}.\par
 	\vspace*{2ex}
 	 
-	\noindent {Persian and Afghani Jews hit each other on the heads and shoulders with scallions every time they say Dayyeinu, especially in the 9th stanza about the Manna the Israelites ate each day in the desert, because Torah tells us that the Israelites began to complain about the manna and longed for the onions, leeks and garlic of Egypt.}\par
+	\noindent {Persian and Afghani Jews hit each other on the heads and shoulders with scallions every time they say Dayyeinu, especially in the %9th 
+		5th stanza about the Manna the Israelites ate each day in the desert, because Torah tells us that the Israelites began to complain about the manna and longed for the onions, leeks and garlic of Egypt.}\par
 	}
 
 \newcommand{\DayyeinuText}{%
-	Many are the things HaShem did for the sake of our ancestors.\par
+	{\centering Many are the things HaShem did for the sake of our ancestors.\par
 	Any one of these things by itself would have sufficed: Dayyeinu.\par
-	We read these as though we ourselves experienced the first Exodus, through the words of our ancestors:\par
+	We read these as though we ourselves experienced the first Exodus, through the words of our ancestors:\par}
 	\vspace*{2ex}
 	\begin{enumerate}
 		\vspace*{2ex}
@@ -417,20 +417,20 @@
 	\vspace*{2ex}
 	\columnratio{0.3}
 	\begin{paracol}{2}
-	\noindent{\large Shank Bone} : \vspace*{8mm} \switchcolumn \raggedright We recall the temple sacrifice, which itself commemorated the lamb's blood painted on the doorways of the Israelites in Egypt, which saved the firstborn Hebrew boys from death. \switchcolumn 
-	\vspace*{5mm}\hspace*{6mm}{\large Matzah} :  \vspace*{4mm} \switchcolumn \raggedright We recall the meal the Israelites ate before they left Egypt included bread made without leavening, because they were leaving too soon to wait for bread to rise. \switchcolumn 
-	\vspace*{5mm} \hspace*{6mm}{\large Maror} :  \vspace*{4mm}\switchcolumn \raggedright the pungent flavour reminds us of the equally bitter prison of slavery the israelites endured. \\
+	\noindent{\large Shank Bone} : \vspace*{8mm} \switchcolumn  We recall the temple sacrifice, which itself commemorated the lamb's blood painted on the doorways of the Israelites in Egypt, which saved the firstborn Hebrew boys from death. \switchcolumn 
+	\vspace*{5mm}\hspace*{6mm}{\large Matzah} :  \vspace*{4mm} \switchcolumn  We recall the meal the Israelites ate before they left Egypt included bread made without leavening, because they were leaving too soon to wait for bread to rise. \switchcolumn 
+	\vspace*{5mm} \hspace*{6mm}{\large Maror} :  \vspace*{4mm}\switchcolumn  the pungent flavour reminds us of the equally bitter prison of slavery the israelites endured. \\
 \end{paracol}
 }
 
 \newcommand{\EveryGenerationText}{
-\largehebrew{בְּכָל-דּוֹר וָדוֹר חַיָּב אָדָם לִרְאוֹת אֶת-עַצְמוֹ כְּאִלּוּ הוּא יָצָא מִמִּצְרַיִם}
-\vspace*{1mm}\\
-\textit{B’chol dor vador chayav adam lirot et-atzmo, k’ilu hu yatzav mimitzrayim.}\\
-\vspace*{2ex}
-\onecolumn
+	\begin{center}
+		\largehebrew{בְּכָל-דּוֹר וָדוֹר חַיָּב אָדָם לִרְאוֹת אֶת-עַצְמוֹ כְּאִלּוּ הוּא יָצָא מִמִּצְרַיִם}\vspace*{1mm}\\
+		\textit{B’chol dor vador chayav adam lirot et-atzmo, k’ilu hu yatzav mimitzrayim.}\\
+		\vspace*{2ex}
+	\end{center}
 	\begin{multicols}{2}
-	\nopagebreak \color{black} \raggedright {V každém pokolení je povinností každého Žida vidět sama sebe, jako 
+	\nopagebreak \color{black} {V každém pokolení je povinností každého Žida vidět sama sebe, jako 
 		by on sám vyšel z Egypta,} jak je řečeno: „Tohoto dne pověz svému synu, 
 	aby říkal: Jelikož tohle učinil Hospodin mně při mém východu z Egypta.“ 
 	Bože náš, jemuž žehnáme, nevykoupil pouze naše předky, ale s nimi 
@@ -438,7 +438,7 @@
 	a dal nám tu zemi, jak přísahal našim otcům.“
 	
 	\columnbreak 
-	\raggedright In every generation, everyone must to see themselves as though they personally left Egypt. As it is said: “Tell your son this day, that he may say, ‘Because the Lord did this to me when I came out of Egypt.’ Our God, whom we bless, not only redeemed our ancestors, but also redeemed us with them, as it is said; “And he brought us up from there, that he might bring us in 
+	 In every generation, everyone must to see themselves as though they personally left Egypt. As it is said: “Tell your son this day, that he may say, ‘Because the Lord did this to me when I came out of Egypt.’ Our God, whom we bless, not only redeemed our ancestors, but also redeemed us with them, as it is said; “And he brought us up from there, that he might bring us in 
 	and give us the land, as he swore to our fathers.”
 \end{multicols}
 \vspace*{2ex}
@@ -446,8 +446,8 @@
 
 \newcommand{\KoreichText}{
 	\color{midblue}During temple times, the lamb sacrifice would be eaten at a festive meal for Pesach. In those times the great sage Hillel made a tradition of sandwiching meat, Maror and Matzah together. We no longer have lamb because we no longer have the temple, but now we make a sandwich using Matzah, Maror, Chazeret and anything else you'd like to include. \\
-	Think about the significance of each part as you construct and eat them.\\
-	\vspace*{2ex}
+	Think about the significance of each part as you construct and eat them.
+	\vspace*{2ex}\\
 	\color{black} \textit{Hilel v době, kdy Chrám existoval, dělával toto - skládal dohromady maces a trpké byliny a pojídal je zároveň.}}
 	
 
@@ -507,8 +507,10 @@
 }
 
 \newcommand{\MiriamReading}{We fill a cup of water to honour Miriam, who watched over Moses in his basket on the river and then led the women, singing, out of Egypt. It is said that when she died, the wells dried up, and she was truly as vital to the Israelites as water:\\
-	\centering
-	“If it wasn’t for the righteousness of women of that generation we would not have been redeemed from Egypt” (Babylonian Talmud, Sotah 9b)\\
-We honour the contribution of all women to Am Yisrael, and especially those in the Exodus story such as Tzipporah, Shifrah, Puah, Pharoah's Daughter, Jochabed and Miriam.}
+	\vspace*{2ex}
+		“If it wasn’t for the righteousness of women of that generation we would not have been redeemed from Egypt” (Babylonian Talmud, Sotah 9b)
+	\vspace*{1ex}\\
+We honour the contribution of all women to Am Yisrael, and especially those in the Exodus story such as Tzipporah, Shifrah, Puah, Pharoah's Daughter, Jochabed and Miriam.
+}
 
 \newcommand{\ChadGayahText}{insert lyrics in multiple languages and maybe other songs}
