--- a/titlepage.sty
+++ b/titlepage.sty
@@ -83,72 +83,72 @@
 			\switchcolumn  Urchac
 			\switchcolumn  Handwashing (no blessing)
 			\switchcolumn  Urchatz 
-			\switchcolumn  \hugehebrew{וּרְחַץ}\\		
+			\switchcolumn  \largehebrew{וּרְחַץ}\\		
 			\switchcolumn*  4.
 			\switchcolumn  Karpas
 			\switchcolumn  Green herbs (dip parsley in saltwater)
 			\switchcolumn  Karpas 
-			\switchcolumn  \hugehebrew{כַּרְפַּס}\\
+			\switchcolumn  \largehebrew{כַּרְפַּס}\\
 			\switchcolumn*  5.
 			\switchcolumn  Jachac
 			\switchcolumn  Breaking the Bread of Affliction
 			\switchcolumn  Yachatz 
-			\switchcolumn  \hugehebrew{יַחַץ}	\\		
+			\switchcolumn  \largehebrew{יַחַץ}	\\		
 			\switchcolumn*  6.
 			\switchcolumn  čtyři
 			\switchcolumn  4 questions/4 children
 			\switchcolumn  Arba’ah
-			\switchcolumn  \hugehebrew{ארבעה}	\\
+			\switchcolumn  \largehebrew{ארבעה}	\\
 			\switchcolumn*  7.
 			\switchcolumn  Magid
 			\switchcolumn  Story, Cup 2
 			\switchcolumn  Maggid
-			\switchcolumn  \hugehebrew{מַגִּיד}	\\
+			\switchcolumn  \largehebrew{מַגִּיד}	\\
 			\switchcolumn*  8.
 			\switchcolumn  Rachca
 			\switchcolumn  Handwashing (blessed)			
 			\switchcolumn  Rachtzah
-			\switchcolumn  \hugehebrew{רָחְצָה}\\	
+			\switchcolumn  \largehebrew{רָחְצָה}\\	
 			\switchcolumn*  9.
 			\switchcolumn  Maca
 			\switchcolumn  Unleavened bread
 			\switchcolumn  Matzah
-			\switchcolumn  \hugehebrew{מַצָּה}	\\
+			\switchcolumn  \largehebrew{מַצָּה}	\\
 			\switchcolumn*  10.
 			\switchcolumn  Maror
 			\switchcolumn  Bitter horseradish/herbs	
 			\switchcolumn  Maror
-			\switchcolumn  \hugehebrew{מָרוֹר}	\\
+			\switchcolumn  \largehebrew{מָרוֹר}	\\
 			\switchcolumn*  11.
 			\switchcolumn  Koresch
 			\switchcolumn  Hillel Sandwich	
 			\switchcolumn  Koreich
-			\switchcolumn  \hugehebrew{כּוֹרֵךְ}	\\	
+			\switchcolumn  \largehebrew{כּוֹרֵךְ}	\\	
 			\switchcolumn*  12.
 			\switchcolumn  Šulchan Orech
 			\switchcolumn  Meal
 			\switchcolumn  Shulchan \\ Oreich
-			\switchcolumn  \hugehebrew{שֻׁלְחָן ערוּך}	\\
+			\switchcolumn  \largehebrew{שֻׁלְחָן ערוּך}	\\
 			\switchcolumn*  13.
 			\switchcolumn  Cafun
 			\switchcolumn  Afikomen hunt	
 			\switchcolumn  Tzafun
-			\switchcolumn  \hugehebrew{צָפוּן}\\	
+			\switchcolumn  \largehebrew{צָפוּן}\\	
 			\switchcolumn* 14.
 			\switchcolumn  Barech
 			\switchcolumn  Grace after meals, Cup 3	
 			\switchcolumn  Bareich
-			\switchcolumn  \hugehebrew{בָּרֵךְ}\\	
+			\switchcolumn  \largehebrew{בָּרֵךְ}\\	
 			\switchcolumn*  15.
 			\switchcolumn  Halel
 			\switchcolumn  Praises, Elijah, Cup 4	
 			\switchcolumn  Hallel
-			\switchcolumn  \hugehebrew{הַלֵּל}	\\
+			\switchcolumn  \largehebrew{הַלֵּל}	\\
 			\switchcolumn*  16.
 			\switchcolumn  Nirca
 			\switchcolumn  Conclusion	
 			\switchcolumn  Nirtzah
-			\switchcolumn  \hugehebrew{נִרְצָה}\\
+			\switchcolumn  \largehebrew{נִרְצָה}\\
 			\colseprulecolor{white}
 		\end{paracol}
 		}
